<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="androidx.navigation.fragment.NavHostFragment"
    tools:context=".FindFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:text="@string/Nombre" />

            <EditText
                android:id="@+id/JTName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tipo de recorrido:" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="33dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/JRB1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Ida" />

                    <RadioButton
                        android:id="@+id/JRB2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/IdaV" />
                </RadioGroup>
            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Dificultad" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/JCB1"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1" />

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="2" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:text="3" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/JBCancel"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Cancelar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/JBGuardar"
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@string/Guardar" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <Button
            android:id="@+id/JBVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Volver" />

    </LinearLayout>

</FrameLayout>